# rserial

./: .gitmodules  CMakeLists.txt  README.md  rserial.c  rserial.h  rserial_def.h
test/: socatfortests.sh  test.c
utils/: rserial_term.c  screen.c  screen.h  tty.c  tty.h
